--- a/css/components/reset.css
+++ b/css/components/reset.css
@@ -5,7 +5,7 @@ body * {
   vertical-align: top;
   box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  word-break: break-all;
+  word-break: keep-all;
 }
 
 main {
