--- a/css/components/introduction.css
+++ b/css/components/introduction.css
@@ -12,7 +12,6 @@
 .introduction-h2 {
   display: inline-block;
   width: 100%;
-  position: relative;
   font-size: 35px;
 }
 .introduction-p {
@@ -24,7 +23,8 @@
   color: #666;
 }
 .introduction .introductionColumn2 {
-  padding-top: 120px;
+  padding-top: 80px;
+  position: relative;
 }
 .introductionColumn2 .btn {
   background: rgb(3, 169, 217);
@@ -87,4 +87,31 @@
 }
 .introduction .column:hover p {
   color: #fff;
+}
+.introductionColumn2::after {
+  content: '';
+  display: inline-block;
+  width: 150px;
+  height: 10px;
+  background: linear-gradient(90deg, rgba(1, 160, 249, 1) 0%, rgba(9, 199, 120, 1) 80% );
+  position: absolute;
+  top: 110px;
+  left: 3px;
+  z-index: -1;
+}
+@media (max-width: 576px) {
+  .introductioncolumn > .left {
+    float: left;
+    width: 100%;
+  }
+  @media (max-width: 576px) {
+    .introductioncolumn > .right {
+      float: left;
+      width: 100%;
+    }
+}
+@media (max-width: 992px) {
+  .introductioncolumn > .right {
+    margin-top: 0;
+  }
 }
