--- a/css/components/contact.css
+++ b/css/components/contact.css
@@ -3,6 +3,7 @@
   background-image: url(../../img/contact-background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  padding-top: 0;
 }
 
 .contact-details {
@@ -10,18 +11,51 @@
   border-radius: 5px;
   box-sizing: border-box;
   box-shadow: 2px 10px 50px rgb(158 158 158 / 25%);
-  margin-top: -150px !important;
-  height: 800px;
+  margin-top: -80px !important;
+  height: 700px;
   padding: 50px;
-}
-.contacts-details > img {
-  float: left;
-  width: 20px;
-  margin-right: 30px;
 }
 .contacts-box > img {
   width: 100px;
   margin: 10px;
+  margin: 10px;
+}
+.contacts-address {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-bottom: 30px;
+}
+.contacts-address .image-box {
+  float: left;
+  height: 50px;
+  width: 30px;
+  margin-right: 20px;
+}
+
+.contacts-address .address {
+  display: block;
+  float: left;
+  width: 70%;
+  color: rgb(90, 88, 88);
+}
+.contacts-address .address > p {
+  padding-top: 10px;
+  line-height: 26px;
+  font-size: 15px;
+}
+.contacts-address .address > a {
+  float: left;
+  width: 100%;
+  color: rgb(90, 88, 88);
+  text-decoration: none;
+  line-height: 26px;
+  font-size: 15px;
+  height: 26px;
+}
+.contacts-address .image-box > img {
+  float: left;
+  width: 20px;
 }
 .contact-title {
   position: relative;
@@ -113,4 +147,20 @@
   padding: 0;
   line-height: 36px;
   border-radius: 40%;
+}
+@media (min-width: 1200px) {
+  .contact-details {
+    height: 720px;
+  }
+  .contacts-address {
+    margin-bottom: 50px;
+  }
+}
+@media (min-width: 1500px) {
+  .contact-details {
+    height: 780px;
+  }
+  .contacts-address {
+    margin-bottom: 70px;
+  }
 }
