--- a/css/Home.css
+++ b/css/Home.css
@@ -523,6 +523,74 @@ div.resume > h2::after {
   padding-bottom: 30px;
 }
 /* how we works */
+
+.works-column {
+  display: flex;
+  height: 350px;
+  object-fit: none;
+  flex-direction: column;
+  text-align: center;
+}
+.circle-container {
+  height: 330px;
+  position: relative;
+}
+.animation-circle {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+}
+.animation-circle:hover {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  animation-name: flash;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-out;
+}
+.dot-circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 1px dashed #33b3fa;
+}
+
+@keyframes flash {
+  0% {
+    background-color: #33b3fa;
+  }
+  100% {
+    width: 320px;
+    height: 320px;
+    border: none;
+    background-color: #fff;
+  }
+}
+.circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: rgb(4, 171, 215);
+  background: radial-gradient(
+    circle,
+    rgba(4, 171, 215, 1) 0%,
+    rgba(7, 187, 162, 1) 50%
+  );
+}
+.circle > img {
+  display: inline-block;
+}
 /* blog */
 .blog-container {
   padding-bottom: 200px;
