--- a/css/components/variables.css
+++ b/css/components/variables.css
@@ -2,4 +2,10 @@
   --main-color: #03a9d9;
   --grey-color: #f0f1f6;
   --mail-color: #fff;
+  --heading-pseudo-element-background-color1: rgb(1, 160, 249);
+  --heading-pseudo-element-background-color2: linear-gradient(
+    90deg,
+    rgba(1, 160, 249, 1) 0%,
+    rgba(9, 199, 120, 1) 80%
+  );
 }
